working publishing node

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,13 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(seeed_mgc3030_driver)
 
-find_package(catkin REQUIRED)
+find_package(catkin REQUIRED COMPONENTS roscpp std_msgs geometry_msgs)
 file(GLOB SRC_FILES 
     ${CMAKE_CURRENT_SOURCE_DIR}/external/Seeed_mgc3x30/src/*.c
     ${CMAKE_CURRENT_SOURCE_DIR}/external/Seeed_mgc3x30/src/*.h
     )
 
+include_directories(${catkin_INCLUDE_DIRS})
 catkin_package()
 
 add_executable(main src/main.c ${SRC_FILES}) 
@@ -14,6 +15,7 @@ target_include_directories(main PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/external/Seeed_mgc3x30>
     )
 target_link_libraries(main 
+    ${catkin_LIBRARIES}
     wiringPi 
     curses
     crypt
@@ -27,6 +29,7 @@ target_include_directories(mgc3030_node PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/external/Seeed_mgc3x30>
     )
 target_link_libraries(mgc3030_node 
+    ${catkin_LIBRARIES}
     wiringPi 
     curses
     crypt
