--- a/package.xml
+++ b/package.xml
@@ -7,6 +7,9 @@
   <license>MIT License</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <depend>roscpp</depend>
+  <depend>std_msgs</depend>
+  <depend>geometry_msgs</depend>
 
   <export>
   </export>
