add launch file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,3 +44,6 @@ install(TARGETS main mgc3030_node
     RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
     )
 
+install(DIRECTORY launch/
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch
+  )
